# django-wsl-docker

./: Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: dockerimage.yml
